--- a/index.html
+++ b/index.html
@@ -36,37 +36,37 @@
                     <article class="article-card">
                         <h3>Las 10 Mejores Laptops para Programar en 2024</h3>
                         <p>Descubre nuestra selección de equipos potentes y portátiles ideales para desarrolladores. Analizamos rendimiento, batería y teclado.</p>
-                        <a href="post-template.html" class="btn">Leer Análisis</a>
+                        <a href="laptops-programar.html" class="btn">Leer Análisis</a>
                     </article>
                     <!-- Article Card 2 -->
                     <article class="article-card">
                         <h3>Auriculares con Cancelación de Ruido: Guía Definitiva</h3>
                         <p>Analizamos los modelos más populares del mercado de Sony, Bose y Apple para que encuentres tu silencio perfecto.</p>
-                        <a href="post-template.html" class="btn">Leer Análisis</a>
+                        <a href="auriculares-cancelacion.html" class="btn">Leer Análisis</a>
                     </article>
                      <!-- Article Card 3 -->
                     <article class="article-card">
                         <h3>Sillas Ergonómicas: Cuida tu Espalda</h3>
                         <p>Trabajar desde casa requiere el mejor equipamiento. Te mostramos las mejores opciones para mantener una postura saludable.</p>
-                        <a href="post-template.html" class="btn">Leer Análisis</a>
+                        <a href="sillas-ergonomicas.html" class="btn">Leer Análisis</a>
                     </article>
                      <!-- Article Card 4 -->
                     <article class="article-card">
                         <h3>Monitores 4K para Diseño Gráfico</h3>
                         <p>Precisión de color y nitidez. Comparativa de los mejores monitores para creativos y diseñadores profesionales.</p>
-                        <a href="post-template.html" class="btn">Leer Análisis</a>
+                        <a href="monitores-diseno.html" class="btn">Leer Análisis</a>
                     </article>
                     <!-- Article Card 5 -->
                     <article class="article-card">
                         <h3>Teclados Mecánicos: ¿Cuál elegir?</h3>
                         <p>Switches rojos, azules o marrones. Entiende las diferencias y elige el teclado perfecto para gaming o escritura.</p>
-                        <a href="post-template.html" class="btn">Leer Análisis</a>
+                        <a href="teclados-mecanicos.html" class="btn">Leer Análisis</a>
                     </article>
                     <!-- Article Card 6 -->
                     <article class="article-card">
                         <h3>Mejores Webcam para Streaming</h3>
                         <p>Mejora la calidad de tus transmisiones con nuestra selección de cámaras web de alta resolución e iluminación.</p>
-                        <a href="post-template.html" class="btn">Leer Análisis</a>
+                        <a href="webcam-streaming.html" class="btn">Leer Análisis</a>
                     </article>
                 </div>
             </section>
