Jules V55: Ciclo 4 + Planificación

--- a/teclados-mecanicos.html
+++ b/teclados-mecanicos.html
@@ -13,6 +13,7 @@
             <div class="logo">
                 <h1><a href="index.html">ARTICULISTA</a></h1>
             </div>
+                        <button class="menu-toggle" aria-label="Abrir menú" aria-expanded="false">☰</button>
             <nav>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
@@ -102,5 +103,6 @@
             </nav>
         </div>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
