feat: implement agentic pipeline, legal pages, seo, and cta buttons

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Plataforma de reseñas y recomendaciones de productos. Encuentra las mejores ofertas y análisis detallados.">
-    <title>ARTICULISTA - Mejores Productos y Reseñas</title>
+    <meta name="description"
+        content="Descubre las mejores reseñas de productos tecnológicos, comparativas y guías de compra. Laptops, Audio y Periféricos analizados por expertos en ARTICULISTA.">
+    <title>ARTICULISTA - Mejores Reseñas y Recomendaciones Tech</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
             <div class="logo">
                 <h1><a href="index.html">ARTICULISTA</a></h1>
             </div>
-                        <button class="menu-toggle" aria-label="Abrir menú" aria-expanded="false">☰</button>
+            <button class="menu-toggle" aria-label="Abrir menú" aria-expanded="false">☰</button>
             <nav>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
@@ -35,39 +38,69 @@
                 <div class="articles-grid">
                     <!-- Article Card 1 -->
                     <article class="article-card">
-                        <h3>Las 10 Mejores Laptops para Programar en 2024</h3>
-                        <p>Descubre nuestra selección de equipos potentes y portátiles ideales para desarrolladores. Analizamos rendimiento, batería y teclado.</p>
-                        <a href="laptops-programar.html" class="btn">Leer Análisis</a>
+                        <img src="https://placehold.co/600x400?text=Laptops+Dev" alt="Laptops para programar"
+                            width="600" height="400" loading="lazy">
+                        <div class="article-content">
+                            <h3>Las 10 Mejores Laptops para Programar en 2024</h3>
+                            <p>Descubre nuestra selección de equipos potentes y portátiles ideales para desarrolladores.
+                                Analizamos rendimiento, batería y teclado.</p>
+                            <a href="laptops-programar.html" class="btn">Leer Análisis</a>
+                        </div>
                     </article>
                     <!-- Article Card 2 -->
                     <article class="article-card">
-                        <h3>Auriculares con Cancelación de Ruido: Guía Definitiva</h3>
-                        <p>Analizamos los modelos más populares del mercado de Sony, Bose y Apple para que encuentres tu silencio perfecto.</p>
-                        <a href="auriculares-cancelacion.html" class="btn">Leer Análisis</a>
+                        <img src="https://placehold.co/600x400?text=Auriculares+Noise+Cancel"
+                            alt="Auriculares con cancelación de ruido" width="600" height="400" loading="lazy">
+                        <div class="article-content">
+                            <h3>Auriculares con Cancelación de Ruido: Guía Definitiva</h3>
+                            <p>Analizamos los modelos más populares del mercado de Sony, Bose y Apple para que
+                                encuentres tu silencio perfecto.</p>
+                            <a href="auriculares-cancelacion.html" class="btn">Leer Análisis</a>
+                        </div>
                     </article>
-                     <!-- Article Card 3 -->
+                    <!-- Article Card 3 -->
                     <article class="article-card">
-                        <h3>Sillas Ergonómicas: Cuida tu Espalda</h3>
-                        <p>Trabajar desde casa requiere el mejor equipamiento. Te mostramos las mejores opciones para mantener una postura saludable.</p>
-                        <a href="sillas-ergonomicas.html" class="btn">Leer Análisis</a>
+                        <img src="https://placehold.co/600x400?text=Sillas+Ergonomicas" alt="Sillas ergonómicas"
+                            width="600" height="400" loading="lazy">
+                        <div class="article-content">
+                            <h3>Sillas Ergonómicas: Cuida tu Espalda</h3>
+                            <p>Trabajar desde casa requiere el mejor equipamiento. Te mostramos las mejores opciones
+                                para mantener una postura saludable.</p>
+                            <a href="sillas-ergonomicas.html" class="btn">Leer Análisis</a>
+                        </div>
                     </article>
-                     <!-- Article Card 4 -->
+                    <!-- Article Card 4 -->
                     <article class="article-card">
-                        <h3>Monitores 4K para Diseño Gráfico</h3>
-                        <p>Precisión de color y nitidez. Comparativa de los mejores monitores para creativos y diseñadores profesionales.</p>
-                        <a href="monitores-diseno.html" class="btn">Leer Análisis</a>
+                        <img src="https://placehold.co/600x400?text=Monitores+4K" alt="Monitores 4K Diseño" width="600"
+                            height="400" loading="lazy">
+                        <div class="article-content">
+                            <h3>Monitores 4K para Diseño Gráfico</h3>
+                            <p>Precisión de color y nitidez. Comparativa de los mejores monitores para creativos y
+                                diseñadores profesionales.</p>
+                            <a href="monitores-diseno.html" class="btn">Leer Análisis</a>
+                        </div>
                     </article>
                     <!-- Article Card 5 -->
                     <article class="article-card">
-                        <h3>Teclados Mecánicos: ¿Cuál elegir?</h3>
-                        <p>Switches rojos, azules o marrones. Entiende las diferencias y elige el teclado perfecto para gaming o escritura.</p>
-                        <a href="teclados-mecanicos.html" class="btn">Leer Análisis</a>
+                        <img src="https://placehold.co/600x400?text=Teclados+Mecanicos" alt="Teclados mecánicos"
+                            width="600" height="400" loading="lazy">
+                        <div class="article-content">
+                            <h3>Teclados Mecánicos: ¿Cuál elegir?</h3>
+                            <p>Switches rojos, azules o marrones. Entiende las diferencias y elige el teclado perfecto
+                                para gaming o escritura.</p>
+                            <a href="teclados-mecanicos.html" class="btn">Leer Análisis</a>
+                        </div>
                     </article>
                     <!-- Article Card 6 -->
                     <article class="article-card">
-                        <h3>Mejores Webcam para Streaming</h3>
-                        <p>Mejora la calidad de tus transmisiones con nuestra selección de cámaras web de alta resolución e iluminación.</p>
-                        <a href="webcam-streaming.html" class="btn">Leer Análisis</a>
+                        <img src="https://placehold.co/600x400?text=Webcam+Streaming" alt="Webcams para streaming"
+                            width="600" height="400" loading="lazy">
+                        <div class="article-content">
+                            <h3>Mejores Webcam para Streaming</h3>
+                            <p>Mejora la calidad de tus transmisiones con nuestra selección de cámaras web de alta
+                                resolución e iluminación.</p>
+                            <a href="webcam-streaming.html" class="btn">Leer Análisis</a>
+                        </div>
                     </article>
                 </div>
             </section>
@@ -76,7 +109,8 @@
             <aside>
                 <div class="sidebar-widget">
                     <h3>Sobre Nosotros</h3>
-                    <p>Somos expertos en analizar productos tecnológicos para ayudarte a tomar la mejor decisión de compra. Priorizamos la calidad y el precio.</p>
+                    <p>Somos expertos en analizar productos tecnológicos para ayudarte a tomar la mejor decisión de
+                        compra. Priorizamos la calidad y el precio.</p>
                 </div>
                 <div class="sidebar-widget">
                     <h3>Categorías</h3>
@@ -89,7 +123,9 @@
                 </div>
                 <div class="sidebar-widget">
                     <h3>Aviso Legal</h3>
-                    <p><small>ARTICULISTA participa en el Programa de Afiliados de Amazon EU, un programa de publicidad para afiliados diseñado para ofrecer a sitios web un modo de obtener comisiones por publicidad.</small></p>
+                    <p><small>ARTICULISTA participa en el Programa de Afiliados de Amazon EU, un programa de publicidad
+                            para afiliados diseñado para ofrecer a sitios web un modo de obtener comisiones por
+                            publicidad.</small></p>
                 </div>
             </aside>
         </div>
@@ -99,12 +135,13 @@
         <div class="container">
             <p>&copy; 2024 ARTICULISTA. Todos los derechos reservados.</p>
             <nav>
-                <a href="#">Política de Privacidad</a> | 
-                <a href="#">Términos de Uso</a> | 
-                <a href="#">Cookies</a>
+                <a href="politica-privacidad.html">Política de Privacidad</a> |
+                <a href="terminos.html">Términos de Uso</a> |
+                <a href="cookies.html">Cookies</a>
             </nav>
         </div>
     </footer>
     <script src="js/script.js"></script>
 </body>
+
 </html>
