Jules V55: Ciclo 1 + Planificación

--- a/cookies.html
+++ b/cookies.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Política de Cookies de ARTICULISTA. Información sobre el uso de cookies y cómo gestionarlas.">
     <title>Política de Cookies - ARTICULISTA</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
