--- a/terminos.html
+++ b/terminos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Términos y Condiciones de Uso de ARTICULISTA. Conoce tus derechos y obligaciones al usar nuestro sitio.">
     <title>Términos de Uso - ARTICULISTA</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
